creat find, more, setting

--- a/cloning/css/screens/login.css
+++ b/cloning/css/screens/login.css
@@ -1,5 +1,5 @@
 .welcome-header {
-  margin: 90px 0px;
+  margin-bottom: 90px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -7,6 +7,7 @@
   font-weight: 500;
 }
 .welcome-header__title {
+  margin-top: 90px;
   margin-bottom: 20px;
   font-size: 25px;
 }
