--- a/cloning/css/components/user-component.css
+++ b/cloning/css/components/user-component.css
@@ -1,5 +1,7 @@
 .user-component {
   justify-content: space-between;
+  padding-top: 7.5px;
+  margin-bottom: 7.5px;
 }
 
 .user-component,
@@ -41,5 +43,25 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.user-commponent__time {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.user-component__text span {
+  display: flex;
+  align-items: center;
+}
+
+.fa-exclamation-circle {
+  margin-left: 5px;
+  padding-top: 3px;
+  color: tomato;
+  font-size: 18px;
 }
