--- a/cloning/css/components/screen-header.css
+++ b/cloning/css/components/screen-header.css
@@ -19,3 +19,16 @@
 .friends-screen {
   padding: 0px var(--horizontal-space);
 }
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotatez(360deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 2s linear infinite;
+}
