--- a/cloning/css/styles.css
+++ b/cloning/css/styles.css
@@ -9,6 +9,7 @@
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/icon-row.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -22,7 +23,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #2e363e;
-  height: 200vh;
+  height: 100vh;
 }
 
 .main-screen {
